update z-index at FixedSocials

--- a/src/components/FixedSocials/FixedSocials.module.css
+++ b/src/components/FixedSocials/FixedSocials.module.css
@@ -5,5 +5,6 @@
   top: calc(50% - 134px);
   right: 0;
   border-radius: 8px 0px 0px 8px;
+  z-index: 10;
   /* transform: matrix(-1, 0, 0, 1, 0, 0); */
 }
